--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,16 @@
 {
-  "name": "simple-angular-seed",
+  "name": "card-slider",
   "version": "0.0.0",
   "authors": "",
   "private": true,
   "dependencies": {
-    "angular": "^1.3.12",
+    "jquery": "~2.2.2",
+    "angular": "~1.4.7",
     "angular-ui-router": "^0.2.11",
-    "angular-animate": "^1.3.0",
-    "bootstrap-sass": "~3.3.6"
+    "angular-animate": "^1.5.0",
+    "bootstrap-sass": "~3.3.6",
+    "angular-touch": "latest",
+    "angular-carousel": "latest" 
   },
   "devDependencies": {
     "angular-mocks": "^1.2.23"
